<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tToolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:navigationIcon="@drawable/ic_menu_white_24dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:titleTextColor="@color/cardview_light_background"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

<HorizontalScrollView android:id="@+id/HorizontalScrollView01"
    android:layout_height="fill_parent"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id = "@+id/RHE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:padding="5dp">

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:id="@+id/date"
                    android:layout_width="120dp"
                    android:padding="5dp"
                    android:text="@string/date"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    />
                <TextView
                    android:id="@+id/project"
                    android:padding="5dp"
                    android:layout_width="120dp"
                    android:textAlignment="center"
                    android:text="@string/project_name"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    />
                <TextView
                    android:layout_width="100dp"
                    android:id="@+id/vendor"
                    android:textAlignment="center"
                    android:padding="5dp"
                    android:text="@string/Vendor"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    />
                <TextView
                    android:layout_width="120dp"
                    android:padding="5dp"
                    android:id="@+id/teams"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="Teams"
                    android:background="@drawable/cell_shape"
                    />
                <TextView
                    android:layout_width="100dp"
                    android:padding="5dp"
                    android:id="@+id/total_teams"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/total_teams"
                    android:background="@drawable/cell_shape"
                    />
                <TextView
                    android:layout_width="120dp"
                    android:padding="5dp"
                    android:id="@+id/dc"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/dc"
                    android:background="@drawable/cell_shape"
                    />
                <TextView
                    android:layout_width="120dp"
                    android:padding="5dp"
                    android:id="@+id/hv"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/hv"
                    android:background="@drawable/cell_shape"
                    />
                <TextView
                    android:layout_width="200dp"
                    android:padding="5dp"
                    android:id="@+id/work"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/work"
                    android:background="@drawable/cell_shape"
                    />
                <TextView
                    android:layout_width="80dp"
                    android:padding="5dp"
                    android:id="@+id/unkown"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/sec"
                    android:background="@drawable/cell_shape"
                    />
                <TextView
                    android:layout_width="80dp"
                    android:padding="5dp"
                    android:id="@+id/dc_complete"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/dc_complete"
                    android:background="@drawable/cell_shape"
                    />
                <TextView
                    android:layout_width="80dp"
                    android:padding="5dp"
                    android:id="@+id/hv_complete"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/hv_complete"
                    android:background="@drawable/cell_shape"
                    />
                <TextView
                    android:layout_width="200dp"
                    android:padding="5dp"
                    android:id="@+id/remarks"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/remarks"
                    android:background="@drawable/cell_shape"
                    />
            </TableRow>
        </TableLayout>

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/register_recycler_view"
            android:layout_width="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_height="match_parent" />

    </LinearLayout>

</HorizontalScrollView>

</LinearLayout>
